=========================================================================
CHANGE LOG
=========================================================================

2007-04-30  Warren L. DeLano <warren@delsci.com>

	* added state and domain options to the select command
	
2007-04-23  Warren L. DeLano <warren@delsci.com>

	* added state=-1 and state=0 options for alter_state
	
2007-04-22  Warren L. DeLano <warren@delsci.com>

	* fixed pdb_unbond_cations for automatic bond detection
	
	* fixed static_singletons for distance objects
	
2007-04-21  Warren L. DeLano <warren@delsci.com>

	* fixed wrapping problems for movies & objects
	
	* fixed "mview reset" for object matrices
	
2007-04-18

	* fixed bug with aligning selections using the menus
	
2007-04-03  Warren L. DeLano <warren@delsci.com>

	* ray option to png
	
2007-04-01  Warren L. DeLano <warren@delsci.com>

	* unsupported surface_types: 4,5 ->5,6; 4 now related to 3
	
	* fixed mouse_wheel_scale bug
	
2007-03-30  Warren L. DeLano <warren@delsci.com>

	* modified multithreaded async_builds to improve parallelism
	
2007-03-24  Warren L. DeLano <warren@delsci.com>

	* allow blank argument values in the command parser 

	* added skip argument to python block command
	
2007-03-23  Warren L. DeLano <warren@delsci.com>

	Changes up to 1.00b19

	* minor changes to better comply with GNU Build System: CHANGES is
	now ChangeLog, also added NEWS, COPYING, AUTHORS.

	* added autoconf-based build (for in-place install only) -- just
	Linux for starters missing macros for Mac OS X / X11 / Fink.
	
	* renamed all Makefile to Makefile.delsci in order to make room
	for an autoconf-based build

	* fixed bug with scenes in interpolated views
    
	* pymol now draws h_bonds from proton to acceptor if proton
	present and provided that h_bond_from_proton setting is true

	* ray_scatter setting (gives a nice increase in image realism)

	* ray_trace_trans_cutoff, ray_trace_persist_cutoff settings
